--- a/SpaceVIL/SpaceVIL.csproj
+++ b/SpaceVIL/SpaceVIL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
@@ -19,9 +19,12 @@
 
     <PropertyGroup>
         <PackageId>com.spvessel.spacevil</PackageId>
-        <Version>0.0.0-dev</Version>
-        <Authors>Roman Sedaikin, Valeriya Sedaikina</Authors>
+        <Authors>Roman Sedaikin, Valeriya Sedaikina, mesh</Authors>
         <Company>Space Vessel</Company>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <Title>SpaceVILSharp_mesh</Title>
+        <AssemblyVersion>0.1.0.3</AssemblyVersion>
+        <FileVersion>0.1.0.3</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
